Avoid expensive sample-list joins when building the cancer study permission cache (#12344)
* Avoid expensive sample-list joins when building the cancer study permission cache

CancerStudyPermissionEvaluator resolves every permission check through
CacheMapUtil's cancer study permission map, which was built from
StudyRepository.getAllStudies() -- a query that joins cancer_study
against sample_list x sample_list_list x reference_genome for every
study in the system, unpaginated. None of that is ever used for
permission checks: hasAccessToCancerStudy() only reads
cancerStudyIdentifier and groups. Add StudyRepository.getStudyPermissions(),
a join-free query selecting just those two columns, and use it instead.

Also give this map its own dedicated CancerStudyPermissionCache: a
small in-memory cache with a short, independently configurable TTL
(cache.cancer_study_permission.ttl_seconds, default 60s), separate from
the general EhCache/Redis-backed caching mechanism (which other cached
items legitimately want a much longer TTL for). Previously, a change
to a study's groups -- including access revocation -- didn't take
effect until someone hit /api/cache or the app restarted; now it
self-expires within a bounded, short window with no manual flush
needed. StaticRefCacheMapUtil and SpringManagedCacheMapUtil each
delegate their getCancerStudyPermissionMap() to this one cache instead
of doing their own forever/long-TTL thing for it; everything else
about those two classes, CacheMapUtil's interface, and
CancerStudyPermissionEvaluator is unchanged.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01S4sZFsa98Tohpsr1ajdW9k

* Refactor getStudyPermissions method caching

Removed cache condition from getStudyPermissions method.

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Fix SonarCloud findings and a spotless regression on this PR

- Reformatted StudyRepository.java (the prior Cop